--- a/prototype/package.json
+++ b/prototype/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:proxy": "next dev & local-ssl-proxy --key localhost-key.pem --cert localhost.pem --source 3001 --target 3000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint --dir src",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.13",
     "eslint-config-prettier": "^8.5.0",
+    "local-ssl-proxy": "^1.3.0",
     "postcss": "^8.4.18",
     "postcss-nested": "^6.0.0",
     "prettier": "^2.7.1",
