--- a/prototype/package.json
+++ b/prototype/package.json
@@ -18,12 +18,14 @@
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
     "next": "13.0.2",
+    "next-qrcode": "^2.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-qr-reader": "^3.0.0-beta-1",
-    "typescript": "4.8.4"
+    "typescript": "4.8.4",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/uuid": "^8.3.4",
     "autoprefixer": "^10.4.13",
     "eslint-config-prettier": "^8.5.0",
     "local-ssl-proxy": "^1.3.0",
