--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/react-dom": "18.0.8",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "next": "13.0.2",
     "next-qrcode": "^2.2.2",
     "react": "18.2.0",
