--- a/.github/workflows/config-gh-labels.yml
+++ b/.github/workflows/config-gh-labels.yml
@@ -11,6 +11,11 @@ on:
       - main
     paths:
       - .github/labels.toml
+  label:
+    types:
+      - created
+      - edited
+      - deleted
   workflow_dispatch:
 
 jobs:
