--- a/package.json
+++ b/package.json
@@ -36,16 +36,19 @@
     "@storybook/manager-webpack5": "^6.5.16",
     "@storybook/react": "^6.5.16",
     "@storybook/testing-library": "^0.0.13",
+    "@types/jest": "^29.4.0",
     "@types/uuid": "^8.3.4",
     "autoprefixer": "^10.4.13",
     "babel-loader": "^8.3.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-storybook": "^0.6.10",
+    "jest": "^29.4.3",
     "local-ssl-proxy": "^1.3.0",
     "postcss": "^8.4.18",
     "postcss-nested": "^6.0.0",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
-    "tailwindcss": "^3.2.2"
+    "tailwindcss": "^3.2.2",
+    "ts-jest": "^29.0.5"
   }
 }
