--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "lint:fix": "yarn lint --fix",
     "format": "prettier --write --ignore-path .gitignore './**/*.{js,jsx,ts,tsx,json}'",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "test": "jest --watch",
+    "test:ci": "jest"
   },
   "dependencies": {
     "@types/node": "18.11.9",
@@ -36,13 +38,18 @@
     "@storybook/manager-webpack5": "^6.5.16",
     "@storybook/react": "^6.5.16",
     "@storybook/testing-library": "^0.0.13",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.4.0",
     "@types/uuid": "^8.3.4",
     "autoprefixer": "^10.4.13",
     "babel-loader": "^8.3.0",
+    "canvas": "^2.11.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-storybook": "^0.6.10",
     "jest": "^29.4.3",
+    "jest-environment-jsdom": "^29.4.3",
     "local-ssl-proxy": "^1.3.0",
     "postcss": "^8.4.18",
     "postcss-nested": "^6.0.0",
