--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "next-qrcode": "^2.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "styled-components": "^5.3.6",
     "typescript": "4.8.4",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.26",
     "@types/uuid": "^8.3.4",
     "autoprefixer": "^10.4.13",
     "eslint-config-prettier": "^8.5.0",
