--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
+    "@zxing/browser": "^0.1.4",
+    "@zxing/library": "^0.20.0",
     "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
