--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react-dom": "18.0.8",
     "@zxing/browser": "^0.1.4",
     "@zxing/library": "^0.20.0",
+    "axios": "^1.5.0",
     "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
