--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-modal": "^3.16.1",
+    "react-toastify": "^9.1.3",
     "styled-components": "^5.3.6",
     "typescript": "4.8.4",
     "uuid": "^9.0.0"
