--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-modal": "^3.16.1",
     "react-toastify": "^9.1.3",
     "styled-components": "^5.3.6",
+    "swr": "^2.2.2",
     "typescript": "4.8.4",
     "uuid": "^9.0.0"
   },
