--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "18.2.0",
     "react-modal": "^3.16.1",
     "react-toastify": "^9.1.3",
+    "react-zxing": "^2.0.0",
     "styled-components": "^5.3.6",
     "swr": "^2.2.2",
     "typescript": "4.8.4",
@@ -51,7 +52,7 @@
     "@storybook/nextjs": "^7.3.2",
     "@storybook/react": "^7.3.2",
     "@storybook/testing-library": "^0.2.1-next.0",
-    "@types/react-modal": "^3.13.1",
+    "@types/react-modal": "^3.16.1",
     "@types/styled-components": "^5.1.26",
     "@types/uuid": "^8.3.4",
     "autoprefixer": "^10.4.13",
