--- a/package.json
+++ b/package.json
@@ -10,60 +10,60 @@
     "lint": "next lint --dir src",
     "lint:fix": "yarn lint --fix",
     "format": "prettier --write --ignore-path .gitignore './**/*.{js,jsx,ts,tsx,json}'",
-    "storybook": "storybook dev -p 6006 -s ./src",
+    "storybook": "storybook dev -p 6006 -s ./src/app/",
     "build-storybook": "storybook build"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.14.6",
-    "@mui/material": "^5.14.6",
-    "@types/node": "18.11.9",
-    "@types/react": "18.0.25",
-    "@types/react-dom": "18.0.8",
+    "@mui/icons-material": "^5.14.14",
+    "@mui/material": "^5.14.14",
+    "@types/node": "20.8.7",
+    "@types/react": "18.2.30",
+    "@types/react-dom": "18.2.14",
     "@zxing/browser": "^0.1.4",
     "@zxing/library": "^0.20.0",
-    "axios": "^1.5.0",
+    "axios": "^1.5.1",
     "babel-plugin-styled-components": "^2.0.7",
-    "eslint": "8.27.0",
-    "eslint-config-next": "13.0.2",
+    "eslint": "8.51.0",
+    "eslint-config-next": "13.5.6",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
-    "next": "13.0.2",
+    "next": "13.5.6",
     "next-qrcode": "^2.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-modal": "^3.16.1",
     "react-toastify": "^9.1.3",
-    "styled-components": "^5.3.6",
-    "swr": "^2.2.2",
-    "typescript": "4.8.4",
-    "uuid": "^9.0.0"
+    "styled-components": "^6.1.0",
+    "swr": "^2.2.4",
+    "typescript": "5.2.2",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.12",
-    "@storybook/addon-actions": "^7.3.2",
-    "@storybook/addon-essentials": "^7.3.2",
-    "@storybook/addon-interactions": "^7.3.2",
-    "@storybook/addon-links": "^7.3.2",
+    "@babel/core": "^7.23.2",
+    "@storybook/addon-actions": "^7.5.1",
+    "@storybook/addon-essentials": "^7.5.1",
+    "@storybook/addon-interactions": "^7.5.1",
+    "@storybook/addon-links": "^7.5.1",
     "@storybook/addon-postcss": "^3.0.0-alpha.1",
-    "@storybook/components": "^7.3.2",
-    "@storybook/nextjs": "^7.3.2",
-    "@storybook/react": "^7.3.2",
-    "@storybook/testing-library": "^0.2.1-next.0",
-    "@types/react-modal": "^3.13.1",
-    "@types/styled-components": "^5.1.26",
-    "@types/uuid": "^8.3.4",
-    "autoprefixer": "^10.4.13",
-    "babel-loader": "^8.3.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-storybook": "^0.6.13",
-    "local-ssl-proxy": "^1.3.0",
-    "postcss": "^8",
+    "@storybook/components": "^7.5.1",
+    "@storybook/nextjs": "^7.5.1",
+    "@storybook/react": "^7.5.1",
+    "@storybook/testing-library": "^0.2.2",
+    "@types/react-modal": "^3.16.2",
+    "@types/styled-components": "^5.1.29",
+    "@types/uuid": "^9.0.6",
+    "autoprefixer": "^10.4.16",
+    "babel-loader": "^9.1.3",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-storybook": "^0.6.15",
+    "local-ssl-proxy": "^2.0.5",
+    "postcss": "^8.4.31",
     "postcss-nested": "^6.0.0",
-    "prettier": "^2.7.1",
-    "prettier-plugin-tailwindcss": "^0.1.13",
-    "storybook": "^7.3.2",
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.6",
+    "storybook": "^7.5.1",
     "tailwindcss": "^3.2.2"
   },
   "resolutions": {
