--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "next-qrcode": "^2.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-jsbarcode": "^0.4.2",
     "react-modal": "^3.16.1",
     "react-toastify": "^9.1.3",
     "styled-components": "^5.3.6",
